@@ -43,6 +43,8 @@ bzr-svn 0.5.3                   UNRELEASED
 
    * Fix concurrent access problems during push/commit. (#248289)
 
+   * Allow svn: revision specifier in non-svn branches. (#337295)
+
   PERFORMANCE
 
    * Significant speed improvements when no (old) tags have to be fetched. Requires 
